@@ -43,35 +43,35 @@ methods:</para>
     <itemizedlist>
       <listitem>
 	<simpara><link
-linkend="method-gtktreemodel--get-iter"><methodname>get_iter</methodname>()</link></simpara>
+linkend="method-gtktreemodel--get-iter"><methodname>gtk.TreeModel.get_iter</methodname>()</link></simpara>
       </listitem>
       <listitem>
 	<simpara><link
-linkend="method-gtktreemodel--get-iter-from-string"><methodname>get_iter_from_string</methodname>()</link></simpara>
+linkend="method-gtktreemodel--get-iter-from-string"><methodname>gtk.TreeModel.get_iter_from_string</methodname>()</link></simpara>
       </listitem>
       <listitem>
 	<simpara><link
-linkend="method-gtktreemodel--get-iter-first"><methodname>get_iter_first</methodname>()</link></simpara>
+linkend="method-gtktreemodel--get-iter-first"><methodname>gtk.TreeModel.get_iter_first</methodname>()</link></simpara>
       </listitem>
       <listitem>
 	<simpara><link
-linkend="method-gtktreemodel--get-iter-root"><methodname>get_iter_root</methodname>()</link></simpara>
+linkend="method-gtktreemodel--get-iter-root"><methodname>gtk.TreeModel.get_iter_root</methodname>()</link></simpara>
       </listitem>
       <listitem>
 	<simpara><link
-linkend="method-gtktreemodel--iter-children"><methodname>iter_children</methodname>()</link></simpara>
+linkend="method-gtktreemodel--iter-children"><methodname>gtk.TreeModel.iter_children</methodname>()</link></simpara>
       </listitem>
       <listitem>
 	<simpara><link
-linkend="method-gtktreemodel--iter-parent"><methodname>iter_parent</methodname>()</link></simpara>
+linkend="method-gtktreemodel--iter-parent"><methodname>gtk.TreeModel.iter_parent</methodname>()</link></simpara>
       </listitem>
       <listitem>
 	<simpara><link
-linkend="method-gtktreemodelsort--convert-child-iter-to-iter"><methodname>convert_child_iter_to_iter</methodname>()</link></simpara>
+linkend="method-gtktreemodelsort--convert-child-iter-to-iter"><methodname>gtk.TreeModelSort.convert_child_iter_to_iter</methodname>()</link></simpara>
       </listitem>
       <listitem>
 	<simpara><link
-linkend="method-gtktreemodelsort--convert-iter-to-child-iter"><methodname>convert_child_iter_to_child_iter</methodname>()</link></simpara>
+linkend="method-gtktreemodelsort--convert-iter-to-child-iter"><methodname>gtk.TreeModelSort.convert_child_iter_to_child_iter</methodname>()</link></simpara>
       </listitem>
     </itemizedlist>
 
