@@ -10,6 +10,8 @@
 	* pygtk-gtkwindow.xml (tooltips_get_info_from_tip_window) Add 
 	description of PyGTK 2.4 method.
 
+	* pygtk-gtktreeiter.xml Add class info for TreeIter creation methods.
+
 2004-04-16  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtksocket.xml ("plug-removed") Add return value description
